--- a/anisble-playbook.yaml
+++ b/anisble-playbook.yaml
@@ -6,12 +6,12 @@
     ansible_user: ubuntu
     ansible_ssh_private_key_file: ~/keypem/yair.pem
     ssh_public_key: ~/.ssh/id_rsa.pub
-    dockerfile_path: /cicd/Dockerfile
-    index_html_path: /cicd/index.html
+    dockerfile_path: ./Dockerfile
+    index_html_path: ./index.html
     docker_image_name: my-nginx-image
   tasks:
     - name: Run Python script to create EC2 instance
-      command: python3 cicd/create-ec2.py
+      command: python3 create-ec2.py
       register: ec2_creation_output
 
     - name: Extract EC2 public IP from the script output
